OO-3472: rewrite the delete routine to delete only the file of the edited checkbox, implement a check to not delete the file if it's used by an other checkbox